--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                     <ion-icon class="checkmark-btn" name="checkmark-outline"></ion-icon>
                     <ion-icon class="close-btn" name="close-outline"></ion-icon>
                 </li>
+                <li class="task-box">
+                    <span class="task-title">Teste 2</span>
+                    <ion-icon class="checkmark-btn" name="checkmark-outline"></ion-icon>
+                    <ion-icon class="close-btn" name="close-outline"></ion-icon>
+                </li>
             </ul>
         </div>
     </div>
