--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
         <div id="tasks-list-container">
             <h2>Estas são as suas tarefas</h2>
             <ul id="task-list">
-                <li class="task-box">
+                <li class="task-box template hide">
                     <span class="task-title">Teste</span>
-                    <ion-icon class="checkmark-btn" name="checkmark-outline"></ion-icon>
-                    <ion-icon class="close-btn" name="close-outline"></ion-icon>
-                </li>
-                <li class="task-box">
-                    <span class="task-title">Teste 2</span>
                     <ion-icon class="checkmark-btn" name="checkmark-outline"></ion-icon>
                     <ion-icon class="close-btn" name="close-outline"></ion-icon>
                 </li>
